v3/cypress/fixtures/invalid-docs/invalid-rowmap.codap
{
    "type": "CODAP",
    "version": "1234",
    "content": {
        "rowMap": "invalid",
        "tileMap": {}
    }
}
